packages/svelte/tests/compiler-errors/samples/attribute-empty/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'missing_attribute_value',
		message: 'Expected attribute value',
		position: [12, 12]
	}
});
